[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enemies/Ranged.gd" type="Script" id=1]
[ext_resource path="res://Art/Enemy_Shroomman_Ranged/Enemy_Shroomman_Ranged_Spritesheet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.5103, 23.4191 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.101961, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 135.469, 25.4961 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 134.806, 24.1692 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 306.907, 25.1789 )

[sub_resource type="Animation" id=7]
resource_name = "Die_Shroom"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Idle_Shroom"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 5 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Shoot_Shroom"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Walk_Shroom"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="RangedEnemy" type="KinematicBody2D"]
collision_layer = 14
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1.02669, 1.02669 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.14708, -1.56158 )
texture = ExtResource( 2 )
vframes = 3
hframes = 4

[node name="Right" type="RayCast2D" parent="."]
position = Vector2( 14.887, 0 )
enabled = true
collision_mask = 6

[node name="Left" type="RayCast2D" parent="."]
position = Vector2( -17.4537, -0.513344 )
enabled = true
collision_mask = 6

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -25.0
margin_top = -38.0
margin_right = 19.0
margin_bottom = -31.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
custom_colors/font_color = Color( 0.988235, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.756863, 0, 1, 1 )
max_value = 30.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftArea" type="Area2D" parent="."]
position = Vector2( -319.287, -1.79623 )
collision_layer = 32
collision_mask = 32
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArea"]
position = Vector2( 147.944, 0 )
shape = SubResource( 4 )

[node name="RightArea" type="Area2D" parent="."]
position = Vector2( 179.726, -1.88567 )
collision_layer = 32
collision_mask = 32
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArea"]
shape = SubResource( 5 )

[node name="SightRange" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightRange"]
position = Vector2( 0, -1.99028 )
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die_Shroom = SubResource( 7 )
anims/Idle_Shroom = SubResource( 8 )
anims/Shoot_Shroom = SubResource( 9 )
anims/Walk_Shroom = SubResource( 10 )

[node name="Tween" type="Tween" parent="."]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="body_entered" from="LeftArea" to="." method="_on_LeftArea_body_entered"]
[connection signal="body_entered" from="RightArea" to="." method="_on_RightArea_body_entered"]
[connection signal="body_exited" from="SightRange" to="." method="_on_SightRange_body_exited"]
